Fix margin-left property for search bar alignment

--- a/overrides/stylesheets/style.css
+++ b/overrides/stylesheets/style.css
@@ -29,8 +29,8 @@
 
 .md-header__option {
     order: 2;
-    margin-left: auto !important; /* Move search bar to the right */
-
+~    margin-left: auto !important; /* Move search bar to the right */
+}
 #.md-header__option[data-md-component="search"] { 
 #    margin-left: auto;        /* Push search bar to the right */
 #}
